--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 # Rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=172.17.0.2
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+# Mailhog
+spring.mail.host=172.17.0.3
+spring.mail.port=1025
+spring.mail.properties.mail.smtp.starttls.enable=true
